# dbt-duckdb-air-quality

./: README.md  pyproject.toml
dbt_duckdb_air_quality/: README.md  dbt_project.yml  dev.duckdb  profile.yml
dbt_duckdb_air_quality/models/core/: air_quality_ranking.sql  air_quality_trends.sql  berlin_air_quality.sql  top_10_cities_air_quality.sql
dbt_duckdb_air_quality/models/marts/: air_quality_ranking.sql  anual_average_air_quality.sql  berlin_air_quality.sql
dbt_duckdb_air_quality/models/staging/: sources.yml  stg_air_quality.sql
