[tool.poetry]
name = "dbt-duckdb-air-quality"
version = "0.1.0"
description = ""
authors = ["danielmschaves <danielmschaves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.9.2"
dbt-duckdb = "^1.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
